- Fix layout issue because of signout position - Now works on iOS in https (had to serve directly the playlist from plex) - Handle capabilities through config file for now - Can set-up host, port in config.js

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -41,7 +41,6 @@ body {
 #header p {
 	float: right;
 	text-align: right;
-    margin-top: 60px;
 	height: 95px;
 	overflow: hidden;
 }
